k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-devops-python
  namespace: devsu-demo-devops-python-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-devops-python
  template:
    metadata:
      labels:
        app: demo-devops-python
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: demo-devops-python
          image: ghcr.io/juanesvelez/devsu/demo-devops-python:a28860576a08f95d20a94ae08e2c44cbe3f501f4
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: demo-devops-python-storage
              mountPath: /app/data
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 60
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "120m"
      volumes:
        - name: demo-devops-python-storage
          hostPath:
            path: /tmp/demo-devops-python
            type: DirectoryOrCreate
