k8s/service.yaml
# k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-devops-python
spec:
  selector:
    app: demo-devops-python
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
